--- a/aiyide/aiyide/QRCodeViewController.xib
+++ b/aiyide/aiyide/QRCodeViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QRCodeViewController">
@@ -48,11 +48,11 @@
                         </button>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="69T-KH-xn8">
                             <rect key="frame" x="20" y="39" width="460" height="40"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.5490196078431373" green="0.5490196078431373" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="gfv-cG-Cty"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5rn-fB-VRf">
@@ -93,7 +93,7 @@
                             <variation key="heightClass=regular-widthClass=compact" constant="60"/>
                         </constraint>
                         <constraint firstItem="69T-KH-xn8" firstAttribute="centerY" secondItem="wTE-y3-VFL" secondAttribute="centerY" id="LKr-hb-u6G"/>
-                        <constraint firstItem="69T-KH-xn8" firstAttribute="leading" secondItem="5rn-fB-VRf" secondAttribute="trailing" constant="6" id="dnU-pm-FTU"/>
+                        <constraint firstItem="69T-KH-xn8" firstAttribute="leading" secondItem="5rn-fB-VRf" secondAttribute="trailing" constant="20" id="dnU-pm-FTU"/>
                         <constraint firstAttribute="trailing" secondItem="wTE-y3-VFL" secondAttribute="trailing" constant="20" id="kfI-OD-tsX"/>
                         <constraint firstItem="wTE-y3-VFL" firstAttribute="top" secondItem="R3r-Pz-20g" secondAttribute="top" constant="44" id="qFS-t9-7a5"/>
                         <constraint firstItem="5rn-fB-VRf" firstAttribute="top" secondItem="R3r-Pz-20g" secondAttribute="top" constant="44" id="vZi-bv-HCM"/>
@@ -181,6 +181,6 @@
     <resources>
         <image name="back" width="12" height="23"/>
         <image name="扫描框.png" width="280" height="280"/>
-        <image name="扫描网格.png" width="24" height="24"/>
+        <image name="扫描网格.png" width="12" height="23"/>
     </resources>
 </document>
