--- a/aiyide/aiyide/LoginViewController.xib
+++ b/aiyide/aiyide/LoginViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
@@ -177,31 +177,6 @@
                         </mask>
                     </variation>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Edd-bj-RMB" customClass="AydRootButton">
-                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="BWg-jQ-bTM"/>
-                    </constraints>
-                    <state key="normal" title="登陆">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="BWg-jQ-bTM"/>
-                        </mask>
-                    </variation>
-                    <variation key="heightClass=regular-widthClass=compact">
-                        <mask key="constraints">
-                            <include reference="BWg-jQ-bTM"/>
-                        </mask>
-                    </variation>
-                    <connections>
-                        <action selector="ClickLoginButton:" destination="-1" eventType="touchUpInside" id="Huc-uZ-qv5"/>
-                        <action selector="clickLogin:" destination="-1" eventType="touchUpInside" id="8kH-yC-r7m"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hRD-Ny-O3o" customClass="AydRootButton">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -231,6 +206,31 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Edd-bj-RMB" customClass="AydRootButton">
+                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="BWg-jQ-bTM"/>
+                    </constraints>
+                    <state key="normal" title="登陆">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="BWg-jQ-bTM"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="BWg-jQ-bTM"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="ClickLoginButton:" destination="-1" eventType="touchUpInside" id="Huc-uZ-qv5"/>
+                        <action selector="clickLogin:" destination="-1" eventType="touchUpInside" id="8kH-yC-r7m"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
@@ -259,11 +259,11 @@
             <variation key="default">
                 <mask key="subviews">
                     <exclude reference="rYC-hJ-0ZE"/>
-                    <exclude reference="Edd-bj-RMB"/>
                     <exclude reference="hRD-Ny-O3o"/>
                     <exclude reference="vTW-Sh-zFi"/>
                     <exclude reference="Pi1-nW-pbW"/>
                     <exclude reference="fcN-aU-8t3"/>
+                    <exclude reference="Edd-bj-RMB"/>
                 </mask>
                 <mask key="constraints">
                     <exclude reference="cJo-rG-kDG"/>
@@ -287,11 +287,11 @@
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="subviews">
                     <include reference="rYC-hJ-0ZE"/>
-                    <include reference="Edd-bj-RMB"/>
                     <include reference="hRD-Ny-O3o"/>
                     <include reference="vTW-Sh-zFi"/>
                     <include reference="Pi1-nW-pbW"/>
                     <include reference="fcN-aU-8t3"/>
+                    <include reference="Edd-bj-RMB"/>
                 </mask>
                 <mask key="constraints">
                     <include reference="cJo-rG-kDG"/>
